check box added

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -29,6 +29,7 @@
   "contact_us": "Contact Us",
   "send": "Send",
   "name": "Name",
+  "business_name": "Business Name",
   "input_name": "Input your name",
   "email": "Email",
   "input_email": "Input your email",
