--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -41,17 +41,19 @@
   "information": "Information",
   "input_information": "Input your information",
   "field_cannot_be_left_blank": "Input field cant not be empty",
-  "value_not_empty": "Input is not empty",
-  "value_not_valid_range": "Input not valid range",
-  "value_not_valid_email": "Input not valid email",
-  "value_not_valid_phone": "Input not valid phone",
-  "value_not_valid_password": "Input not valid password",
-  "input_at_least_one_number": "Input at least one number",
-  "error_at_least_one_letter": "Input at least one Letter",
-  "input_at_least_one_upper_case": "Input at least one Capital Letter",
-  "input_at_least_one_lower_case": "Input at least one Small Letter",
-  "input_at_least_one_special_char": "Input at least one Special Character",
-  "value_not_valid_id": "Input not valid ID",
+  "value_not_empty": "Field can not be empty",
+  "value_not_valid_range": "Invalid range",
+  "value_not_valid_email": "Invalid email",
+  "value_not_valid_phone": "Invalid phone number",
+  "value_not_valid_password": "Invalid password",
+  "input_at_least_one_number": "Required at least one number",
+  "error_at_least_one_letter": "Required at least one Letter",
+  "input_at_least_one_upper_case": "Required at least one Capital Letter",
+  "input_at_least_one_lower_case": "Required at least one Small Letter",
+  "input_at_least_one_special_char": "Required at least one Special Character",
+  "accept_terms": "You need to accept terms",
+
+  "value_not_valid_id": "Invalid ID",
   "edit_profile": "Edit Profile",
   "address": "Address",
   "input_address": "Input your address",
