user sign up validation complete

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -42,10 +42,12 @@
   "input_information": "Input your information",
   "field_cannot_be_left_blank": "Input field cant not be empty",
   "value_not_empty": "Field can not be empty",
+  "value_not_name": "It's not a Name",
   "value_not_valid_range": "Invalid range",
   "value_not_valid_email": "Invalid email",
   "value_not_valid_phone": "Invalid phone number",
   "value_not_valid_password": "Invalid password",
+  "value_not_match": "Password does not match",
   "input_at_least_one_number": "Required at least one number",
   "error_at_least_one_letter": "Required at least one Letter",
   "input_at_least_one_upper_case": "Required at least one Capital Letter",
