upload image firebase

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -19,10 +19,14 @@
   "search_product": "Search Products...",
   "category_not_found": "Category not found",
   "item_not_found": "Item not found",
-  "password": "Password",
   "change_password": "Change Password",
+  "forgot_password": "Forgot Password",
+  "reset_password": "Reset Password",
+  "password": "Password",
   "old_password": "Old Password",
+  "new_password": "New Password",
   "input_your_password": "Input your password",
+  "input_new_password": "Input new password",
   "confirm_password": "Confirm Password",
   "confirm_your_password": "Confirm your password",
   "confirm": "Confirm",
@@ -32,12 +36,16 @@
   "contact_us": "Contact Us",
   "send": "Send",
   "name": "Name",
-  "business_name": "Business Name",
   "input_name": "Input your name",
+  "business_name": "Business Name",
+  "input_business_name": "Input your business name",
   "email": "Email",
   "input_email": "Input your email",
   "phone": "Phone",
-  "input_phone": "Input your phone",
+  "input_phone": "Input phone",
+  "input_otp": "Input Pin Number",
+  "verify": "Verify",
+  "resend": "Resend",
   "information": "Information",
   "input_information": "Input your information",
   "field_cannot_be_left_blank": "Input field cant not be empty",
@@ -53,8 +61,9 @@
   "input_at_least_one_upper_case": "Required at least one Capital Letter",
   "input_at_least_one_lower_case": "Required at least one Small Letter",
   "input_at_least_one_special_char": "Required at least one Special Character",
-  "accept_terms": "You need to accept terms",
-
+  "accept_terms_error": "You need to accept terms",
+  "I_accept": "I accept ",
+  "terms_and_conditions": "Terms & Conditions",
   "value_not_valid_id": "Invalid ID",
   "edit_profile": "Edit Profile",
   "address": "Address",
@@ -80,8 +89,6 @@
   "end_time": "End Time",
   "rating": "Rating",
   "font": "Font",
-  "forgot_password": "Forgot Password",
-  "reset_password": "Reset Password",
   "search_location": "Search Location",
   "more": "More",
   "popular_location": "Popular Location",
@@ -102,12 +109,17 @@
   "review_rating": "Review Rating",
   "delete": "Delete",
   "image": "Image",
-  "phone": "Phone",
   "date_established": "Date Established",
   "featured": "Featured",
   "related": "Related",
   "profile": "Profile",
+  "edit_business_profile": "Edit Business Profile",
+  "add_video": "Add New Video",
+  "create_account": "Create Account",
+  "have_account": "Already have an account",
+  "try_again": "Try Again",
   "sign_in": "Sign In",
+  "sign_up": "Sign Up",
   "sign_out": "Sign Out",
   "setting": "Setting",
   "review": "Reviews",
@@ -125,7 +137,6 @@
   "version": "Version",
   "post": "Post",
   "follower": "Follower",
-  "sign_up": "Sign Up",
   "input_id": "Input your account",
   "default": "Default",
   "brown": "Brown",
